--- a/contracts/ambur-registry/Cargo.toml
+++ b/contracts/ambur-registry/Cargo.toml
@@ -55,6 +55,7 @@ cw2 = "1.1.0"
 cw721-base = "0.18.0"
 schemars = "0.8.12"
 serde = { version = "1.0.183", default-features = false, features = ["derive"] }
+serde-json-wasm = "1.0.0"
 thiserror = "1.0.44"
 
 [dev-dependencies]
